quoting-CypressTK1/force-app/main/default/objects/ApprovalRequest__c/ApprovalRequest__c.object-meta.xml
<CustomObject>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Approval Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>