quoting-CypressTK1/force-app/main/default/objects/ApprovalRequest__c/fields/PrimaryAccountName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccountName__c</fullName>
    <formula>PrimaryItemId__r.QuoteId__r.AccountId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Account Name</label>
    <type>Text</type>
</CustomField>