quoting-CypressTK1/force-app/main/default/objects/ApprovalRequest__c/fields/PrimaryItemId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Item</label>    
    <referenceTo>ApprovalRequestItem__c</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>ApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>