quoting-CypressTK1/force-app/main/default/objects/ApprovalRequest__c/fields/PrimaryQuoteName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryQuoteName__c</fullName>
    <formula>PrimaryItemId__r.QuoteId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote Name</label>
    <type>Text</type>
</CustomField>